feat(PagingDTO): Implement PagingDTO for fetching Page from database. Refactor existing code